force-app/main/default/objects/Service_Address__c/Service_Address__c.object-meta.xml
<CustomObject>
    <label>Service Address</label>
    <nameField>
        <displayFormat>SA-{0}</displayFormat>
        <label>Service Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>