force-app/main/default/objects/Service_Address__c/fields/Service_Address_AddLine1__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_AddLine1__c</fullName>
    <formula>Location__r.Address__c &amp; " " &amp; 
Location__r.Address_2__c &amp; " " &amp; 
Location__r.Address_3__c</formula>
    <label>Service Address AddLine1</label>
    <type>Text</type>
</CustomField>