force-app/main/default/objects/Service_Address__c/fields/Service_Address_ATTN__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_ATTN__c</fullName>
    <formula>Location__r.Attention_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Address ATTN</label>
    <type>Text</type>
</CustomField>