force-app/main/default/objects/Service_Address__c/fields/Service_Address_Full_Output_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_Full_Output_Name__c</fullName>
    <description>Full output of Case Role for Service Address locations.</description>
    <formula>Case_Role__r.Relationship_Full_Output__c</formula>
    <label>Service Address Full Output Name</label>
    <type>Text</type>
</CustomField>